--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "ai": "^3.4.33",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.468.0",
     "next": "14.2.18",
     "openai": "^4.73.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
