Fix hero tool links and workflow git conflicts
HERO TOOL BUTTONS:
- Salary Negotiator: #salary-negotiator -> /tools/salary-negotiator
- Resume Reviewer: #resume-reviewer -> /tools/resume-reviewer
- Side Hustle: #side-hustle -> /tools/side-hustle
- AI Mentor: #ai-mentor -> / (floating chat on homepage)
- Scholarship Finder: already correct (/scholarships)

WORKFLOW FIXES:
- Add 'git pull --rebase' before push in both workflows
- Prevents push conflicts when manual commits happen during workflow
- Workflows now sync with latest main before pushing

AUTO-UPDATE TO WEBSITE:
Yes! When workflows run successfully:
1. GitHub Actions creates/updates files
2. Commits to main branch
3. Vercel auto-detects commit and deploys
4. New content live in ~2 minutes

--- a/.github/workflows/auto-blog.yml
+++ b/.github/workflows/auto-blog.yml
@@ -39,6 +39,9 @@ jobs:
           git add app/blog/ || true
           git diff --staged --quiet || git commit -m "🤖 Auto-post: Weekly blog content" || echo "No changes to commit"
       
+      - name: Pull latest changes
+        run: git pull --rebase origin main || true
+      
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
