--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.468.0",
     "next": "14.2.18",
+    "next-mdx-remote": "^5.0.0",
     "openai": "^4.73.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
