--- a/.github/workflows/auto-blog.yml
+++ b/.github/workflows/auto-blog.yml
@@ -2,8 +2,8 @@ name: Auto Blog Posts
 
 on:
   schedule:
-    # Run every Monday at 9 AM UTC (1 AM PST)
-    - cron: '0 9 * * 1'
+    # Run every Monday at 8:05 AM UTC (5 min after midnight PT quota reset)
+    - cron: '5 8 * * 1'
   workflow_dispatch: # Allow manual trigger
 
 permissions:
