--- a/.github/workflows/update-scholarships.yml
+++ b/.github/workflows/update-scholarships.yml
@@ -2,8 +2,8 @@ name: Update Scholarships
 
 on:
   schedule:
-    # Run on 1st of every month at 10 AM UTC
-    - cron: '0 10 1 * *'
+    # Run on 1st of every month at 8:05 AM UTC (5 min after midnight PT quota reset)
+    - cron: '5 8 1 * *'
   workflow_dispatch: # Manual trigger
 
 permissions:
