--- a/.github/workflows/auto-blog.yml
+++ b/.github/workflows/auto-blog.yml
@@ -1,9 +1,15 @@
-name: Auto Blog Posts
+name: Auto Blog Posts (Multi-Schedule)
 
 on:
   schedule:
-    # Run every Monday at 3:00 AM UTC (11:00 AM Philippine Time)
-    - cron: '0 3 * * 1'
+    # Monday 8:30 AM UTC (4:30 PM Philippines) - after API reset
+    - cron: '30 8 * * 1'
+    # Tuesday 11:00 AM UTC (7:00 PM Philippines)
+    - cron: '0 11 * * 2'
+    # Thursday 2:30 PM UTC (10:30 PM Philippines)
+    - cron: '30 14 * * 4'
+    # Saturday 10:00 AM UTC (6:00 PM Philippines)
+    - cron: '0 10 * * 6'
   workflow_dispatch: # Allow manual trigger
 
 permissions:
